# topcoinbot

./: .gitignore
assets/: all-wallets-COr04tu6.js  app-store-B0_LwkpW.js  arrow-bottom-6U1j2m_D.js  arrow-bottom-BofD4uwl.js  arrow-bottom-circle-Bu5pxDT8.js  arrow-bottom-circle-OEB7Un6x.js  arrow-left-DT0xs5E5.js  arrow-right-Dm5xtFeW.js  arrow-top-DdSVyZ6U.js  bank-B-agNy7a.js  bank-CaFbutqd.js  basic-Cywt4bS-.js  browser-UT6pWN2M.js  card-DvWt1YKM.js  ccip-c0rhARIy.js  checkmark-DGbDCt_Y.js  checkmark-bold-DEbr9UA8.js  chevron-bottom-Bc9HaG27.js  chevron-right-BLwbFF2-.js  chevron-right-D7Aq4Tml.js  chevron-top-BPec6kHR.js  chevron-top-DgwUtQj3.js  chrome-store-hF5qIhgl.js  clock-f-1ewL8q.js  close-ChDCQr3D.js  close-D8qNtIVG.js  coinPlaceholder-C1UCP2Eo.js  coinPlaceholder-Ctfo7Ouq.js  core-DHSJpK28.js  core-fIWa6WZn.js  cursor-4lhl0Bnq.js  cursor-transparent-C16DBjBB.js  desktop-DOK_iSKJ.js  desktop-NazdEprq.js  disconnect-DQS56knW.js  discord-C2mj9hAe.js  etherscan-DB8-HzKG.js  external-link-BvgEwB_6.js  external-link-qZYgSkdf.js  facebook-CIV1GkYg.js  (+46 more)
backend/: .env.example  pyproject.toml  requirements.txt  requirements_minimal.txt
backend/app/: coingecko_service.py  database.py  dca_service.py  deposit_monitor.py  email_api_service.py  encryption.py  encryption_service.py  exchange_service.py  grid_service.py  infinity_service.py  main.py  models.py  momentum_service.py  otp_service.py  portfolio_service.py  pricing.py  staking_service.py  subscription_service.py  wallet_manager.py  web3_service.py
frontend/: index.html
frontend/assets/: add-DYlkvgOd.js  (+91 more)
