[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.8"
fastapi = "0.68.0"
psycopg2-binary = "2.8.6"
ccxt = "1.95.0"
web3 = "5.31.0"
python-dotenv = "0.19.0"
pydantic = "1.10.12"
httpx = "0.24.0"
aiohttp = "3.8.0"
cryptography = "3.4.8"
requests = "2.28.0"
pandas = "1.1.5"
numpy = "1.19.5"
pyjwt = "2.4.0"
uvicorn = "0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
